# sigma-quant-stream

./: .env.example  .gitignore  .goreleaser.yml  CLAUDE.md  CONTRIBUTING.md  HANDOFF-MISSION-ARCHITECTURE.md  HANDOFF-QUANT-HOLES-FIX.md  Makefile  README.md  SETUP.md  config.json  go.mod  go.sum  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md  quant-arb-detector.md  quant-artifact-builder.md  quant-base-hit.md  quant-class-wrapper.md  quant-coarse-grid.md  quant-combo-finder.md  quant-config-gen.md  quant-conversion-pusher.md  quant-cost-validator.md  quant-crypto-researcher.md  quant-edge-validator.md  quant-exchange-validator.md  quant-firm-ranker.md  quant-freqtrade-deployer.md  quant-funding-analyzer.md  quant-hypothesis-writer.md  quant-idea-hunter.md  quant-liquidation-tracker.md  quant-loss-mfe.md  quant-market-maker.md  quant-metrics-calc.md  quant-mfe-tracker.md  quant-notifier.md  quant-onchain-researcher.md  quant-oos-analyzer.md  quant-overfit-checker.md  quant-pandas-adapter.md  quant-paper-analyzer.md  quant-pattern-learner.md  quant-perturb-tester.md  quant-pine-parser.md  quant-promo-router.md  quant-prop-firm-validator.md  quant-queue-pusher.md  quant-readme-gen.md  quant-regime-detector.md  quant-reject-router.md  quant-results-logger.md  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
backlogs/: pane-5-prop_firm_validator.json
cli/: health.py  main.py  onboarding.py  setup_claude.py  status.py  strategies.py  tutorial.py
data/: README.md
docs/: architecture.md  developer-path.md  getting-started.md  go-cli-architecture.md  go-cli-visual-design.md  terminal-setup.md  trader-path.md
freqtrade/: README.md  config-paper.json  strategy-template.py
lib/: backtest_runner.py
patterns/: crypto-what-fails.md  crypto-what-works.md  exchange-gotchas.md  indicator-combos-crypto.md  indicator-combos.md  prop-firm-gotchas.md  what-fails.md  what-works.md
profiles/: README.md  crypto-cex.json  crypto-dex-hyperliquid.json  futures.json
prompts/: backtester.md  converter.md  optimizer.md  researcher.md
scripts/: claim-idea.py  cost-tracker.py  download-data.py  freqtrade-deploy.sh  generate-backlog.py  health-check.py  invoke-quant-team.sh  iterm-quant-launcher.js  iterm-tmux-launcher.sh  notify.py  prop-firm-validator.py  quant-control.sh  quant-ralph.sh  quant-swarm-launcher.sh  run_orb_backtest_030.py  setup-wizard.py  spawn-quant-team.sh  tmux-quant-launcher.sh  verify-completion.sh
seed/: sample_strategy.py
(+179 files in other folders)
